--- a/frontend/src/styles/components/_connexion.scss
+++ b/frontend/src/styles/components/_connexion.scss
@@ -1,19 +1,29 @@
-.log-button {
+
+
+.log {
     margin-top: 25px;
     display: flex;
+	flex-direction: row;
     justify-content: center;
+	@media screen and (max-width: 1024px) {
+        flex-direction: column;
+		align-items: center;
+		min-width: 80%;
+		
+    }
 }
 
-button {
-    box-shadow: 3px 4px 0px 0px #8a2a21;
-	background:linear-gradient(to bottom, #c62d1f 5%, #e08c86 100%);
-	background-color:#c62d1f;
-	border-radius:18px;
-	border:1px solid #d02718;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:17px;
-	padding:7px 25px;
-	text-shadow:0px 1px 0px #810e05;
-    margin: 15px;
+.contain-log {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #dddcda;
+	padding: 30px;
+	margin: 10px;
+	border-radius: 10px;
+	border:3px solid #d02718;	
 }
+
+
+
+
