--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -2,10 +2,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background: white;
     
 }
+
+
 
 .header-connect {
     display: flex;
     justify-content: center;
+    background: white;
+    
 }
