--- a/frontend/src/styles/_settings.scss
+++ b/frontend/src/styles/_settings.scss
@@ -1,8 +1,10 @@
 body {
     width: 100%;
-    background: url(../asset/background.jpg) center/cover;
+    background: url(../asset/background.jpg) center;
+    margin: 0;
     
 }
+
 
 button {
     box-shadow: 3px 4px 0px 0px #8a2a21;
