--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -6,11 +6,13 @@
     
 }
 
-
-
 .header-connect {
     display: flex;
     justify-content: center;
     background: white;
-    
+}
+
+
+.search {
+    margin: 25px 0 0 15px;
 }
