--- a/frontend/src/styles/_settings.scss
+++ b/frontend/src/styles/_settings.scss
@@ -1,8 +1,11 @@
 body {
     width: 100%;
     background: url(../asset/background.jpg) center;
-    margin: 0;
-    
+    margin: 0;   
+}
+
+#root {
+    width: 100%;
 }
 
 
