--- a/frontend/src/styles/components/_post.scss
+++ b/frontend/src/styles/components/_post.scss
@@ -1,10 +1,39 @@
 .post {
     display: flex;
-    align-items: center;
+	flex-direction: column;
+    align-items:flex-start;
 	background-color: #dddcda;
-	padding: 30px;
+	padding: 10px;
     margin: 40px auto 40px auto;
 	max-width: 75%;
 	border-radius: 10px;
-	border:3px solid #d02718;   
+	border:3px solid #d02718;  
+	
+	@media screen and (min-width: 1024px) {
+		width: 50%;
+		
+    }
+}
+
+.location-post {
+	background-color: #ffffff;
+}
+
+.counter-like {
+	padding: 10px;
+}
+
+.share {
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	a {
+		font-size: 18px;
+		color: #5e4141;
+		background-color: #ffffff;
+		padding: 10px;
+		border: 3px solid #d02718; 
+		border-radius: 10px; 
+		
+	}
 }
