--- a/frontend/src/styles/components/_connexion.scss
+++ b/frontend/src/styles/components/_connexion.scss
@@ -13,16 +13,52 @@
     }
 }
 
-.contain-log {
+.connection-form {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background-color: #dddcda;
-	padding: 30px;
+	padding: 30px 40px 30px 5px;
 	margin: 10px;
 	border-radius: 10px;
-	border:3px solid #d02718;	
+	border:3px solid $color-2;	
+	background: $color-3;
+
+
+	.form-container {
+		display: grid;
+		grid-template-columns: 45% 55%;
+  
+		@media screen and(max-width: 550px) {
+		  grid-template-columns: 1fr;
+		}
+  
+		ul {
+			padding: 0;
+			margin-left: 10px;
+			li {
+				list-style: none;  
+				cursor: pointer;
+				border-radius: 20px;
+				padding: 10px 20px;
+				transition: 0.2s;
+	
+				@media screen and(max-width: 550px) {
+				width: 80%;
+				margin: 0 auto;
+				}
+			}
+			.active-btn {
+				background: $color-3;
+	
+				&:hover {
+					background: $color-1;
+				}
+			}
+		}
+	}
 }
+
+
 
 
 
