--- a/frontend/src/styles/_settings.scss
+++ b/frontend/src/styles/_settings.scss
@@ -14,7 +14,7 @@ body {
 }
 
 
-button {
+button, .button {
     box-shadow: 3px 4px 0px 0px #8a2a21;
 	background:linear-gradient(to bottom, #c62d1f 5%, #e08c86 100%);
 	background-color:#c62d1f;
@@ -26,6 +26,7 @@ button {
 	padding:7px 25px;
 	text-shadow:0px 1px 0px #810e05;
     margin: 15px;
+    cursor: pointer;
 }
 
 label {
@@ -45,6 +46,7 @@ input {
     border-radius: 14px;
     box-shadow: 2px 8px 13px rgba(66,66,66,.63);
     text-shadow: 0px 0px 5px rgba(66,66,66,.75);
+   
 }
 
 input:focus {
