--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import "./settings";
-@import "./components/header";
-@import "./components/connexion";
-@import "./components/post";
+@import './settings';
+@import './components/navbar';
+@import './components/log/loginForm';
+@import './components/post/publishPost.scss';
